source/styles/ui/_buttons.scss
#nh-collection {

	a {

		text-decoration: none;
		color: inherit;
		cursor: pointer;
	}

	button {

		border: none;
		outline: none;
		background: none;
		cursor: pointer;

		&:hover {
			cursor: pointer;
		}
	}

	.block-button {

		border: none;
		outline: none;
		overflow: hidden;
		position: relative;
		padding: 17px 26px;
		background-color: $WHITE;
		color: $WHITE;
		// border: solid 2px $NH_RED_COLOR;
		transition: color $BTN_LABEL_TRANSITION ease;
		box-sizing: border-box;

		&:before,
		&:after {
			display: block;
			content: '';
			position: absolute;
			background-color: $NH_RED_COLOR;
			z-index: 0;
			height: 102%;
			width: 53%;
			top: -1%;
			transition: width $BTN_HOVER_TRANSITION ease;
		}

		&:before {
			left: -1%;
		}
		&:after {
			right: -1%;
		}

		span {
			position: relative;
			z-index: 1;
		}

		&:hover {

			&:before,
			&:after {
				width:0%;
			}
			color: $NH_RED_COLOR;
		}

		&.tag-button {
			color: $NH_BROWN_COLOR;
			border: solid 1px $NH_BROWN_COLOR;
			padding: 3px 12px;

			&:before,
			&:after {
				width: 0;
				background-color: $NH_BROWN_COLOR;
			}
			&:hover {
				color: $WHITE;
				&:before,
				&:after {
					width: 51%;
				}
			}
			&.active {
				border: solid 2px $NH_BROWN_COLOR;
				font-weight: bold;
			}

		}
	}

	.play-button {
		padding: 11px 14px;
	  font-size: 15px;
	}

	.more-button {
		padding: 11.5px 13px;
	  font-size: 15px;

	    &.close {
	    	transform: rotate(45deg);
	    	&:before,
	    	&:after {
				transform: rotate(-45deg);
				transform-origin: 60% 20%;
				height: 200%;
				width: 120%;
	    	}
	    	&:after {
	    		transform-origin: -30% 0%;
	    	}
	    	&:before {
	    		left: -100%;
	    	}
	    	&:hover {
	    		&:before,
	    		&:after {
	    			width: 0;
	    		}
	    	}
	    }
	}

	.arrow-button {
		padding: 14px 11px;

		.arrow-wrapper {
			position: relative;
			z-index: 1;

			span.icon-arrow_icon:first-child {
				margin: 0 -6px 0 0;
			}
		}

		&.look-down {
			.arrow-wrapper {
				transform: rotate(90deg);
			}
		}
		&.look-left {
			.arrow-wrapper {
				transform: rotate(180deg);
			}
		}
		&.look-up {
			.arrow-wrapper {
				transform: rotate(270deg);
			}
		}
	}

	.drag-button {
		.arrow-wrapper {
			display: inline-block;
			margin-right: 10px;
		}
	}

	$height-line: 2px;

	.hamburger-icon {
		width:10px;
		height:10px;
		position:relative;
		display:block;

		@include min-screen($BREAKPOINT_S) {

			width:14px;
			height:12px;
		}

		.line {
			display:block;
			background:$WHITE;
			width: 100%;
			height:$height-line;
			position:absolute;
			left:0;
			transition: all 0.4s;
			overflow: hidden;
			transition: all $BTN_LABEL_TRANSITION linear;
			&.line-1 {
			  // top:0;
			  top: -1px;
			  &:after {
			  	transition-delay: $BTN_TRANSITION_DELAY*0.6;
			  }
			}
			&.line-2 {
			  // top:33.3%;
			  top: 3px;
			  &:after {
			  	transition-delay: $BTN_TRANSITION_DELAY*0.8;
			  }
			}
			&.line-3 {
			  // top:66.6%;
			  top: 7px;
			  &:after {
			  	transition-delay: $BTN_TRANSITION_DELAY*1.2;
			  }
			}
			&.line-4 {
			  // top:100%;
			  top: 11px;
			  &:after {
			  	transition-delay: $BTN_TRANSITION_DELAY*0.8;
			  }
			}
			&:after {
				content: '';
				position: absolute;
				z-index: 1;
				top: 0;
				width: 100%;
				height: 100%;
				left: 100%;
				background-color: $NH_RED_COLOR;
				transition: left $BTN_HOVER_TRANSITION linear;
			}
		}

		// &:hover {
		// 	.line-1,
		// 	.line-2,
		// 	.line-3,
		// 	.line-4 {
		// 		&:after {
		// 			left: 0;
		// 		}
		// 	}
		// }
		&.open {
			.line-2 {
				transform: rotate(-45deg);
				top: 50%;
			}
			.line-3 {
				transform: rotate(45deg);
				top: 50%;
			}
			.line-1,
			.line-4 {
				width: 0;
			}
		}
	}

	.vertical-button {
		position: relative;
		cursor: pointer;
		background-color: $WHITE;
		color: $WHITE;
		transition: color $BTN_HOVER_TRANSITION ease;
		&:before {
			display: block;
			content: '';
			position: absolute;
			background-color: $NH_RED_COLOR;
			z-index: 0;
			height: 100%;
			width: 101%;
			top: 0;
			transition: width $BTN_HOVER_TRANSITION ease;
		}
		&:hover {
			cursor: pointer;
			color: $NH_RED_COLOR;
			&:before {
				width: 0;
			}
		}
		&.inverted {
			background-color: $NH_RED_COLOR;
			color: $NH_RED_COLOR;
			&:before {
				background-color: $WHITE;
			}
			&:hover {
				color: $WHITE;
			}
		}

		&.main-menu-bar,
		&.close-video {
			height: 100%;
			width: 35px;
			position: absolute;
			right: 0;
			top: 0;

			.hamburger-icon {
				position: absolute;
				top: 50%;
				left: 50%;
				margin: -6px 0 0 -8px;
			}

			&:hover {
				.hamburger-icon {
					.line-1,
					.line-2,
					.line-3,
					.line-4 {
						&:after {
							left: 0;
						}
					}
				}
			}
		}
	}

	.disabled .vertical-button {
		&:hover {
			cursor: inherit;
			&:before {
				width: 101%;
			}
		}
	}

}

